--- a/Week-03-CLI_Source_Control_and_Arrays_and_Functions/index.html
+++ b/Week-03-CLI_Source_Control_and_Arrays_and_Functions/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Jose G Espino Espino</h1>
     <h2>Promineo Tech 2023-03-30-fe-pacific</h2>
-    <video controls src="Assignment.mp4" width="500"></video>
+    <video controls src="week03Assignment.mp4" width="500"></video>
 </body>
 </html>
