added week04 assignment files. This has been my progress for today April 24

--- a/Week-04-ECMAScript_6_and_Intermediate_JavaScript/LMS/Assignment/Submission/week04Assignment.html
+++ b/Week-04-ECMAScript_6_and_Intermediate_JavaScript/LMS/Assignment/Submission/week04Assignment.html
@@ -10,15 +10,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jose G Espino Espino</title>
+    <title>Week 04 Assignment</title>
 </head>
 <body><!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHC6SJC"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <h1>Jose G Espino Espino</h1>
-    <h2>Promineo Tech 2023-03-30-fe-pacific</h2>
-    <h3>Week 03 Assignment video:</h3>
-    <video controls src="week03Assignment.mp4" width="500"></video>
+    <h2>Promineo 2023-03-30-fe-pacific</h2>
+    <h3>Week 04 Assignment video:</h3>
+    <video controls src="week03Assignment.mp4" width="500"></video><br>
+    <h3>Please open the console to view logs.</h3>
+    <script src="week04Assignment.js"></script>
+</body>
+    
 </body>
 </html>
