--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <h1>Jose G Espino Espino</h1>
     <h2>Promineo 2023-03-30-fe-pacific</h2>
-    <a href="Week-03-CLI_Source_Control_and_Arrays_and_Functions\index.html">Week 03 Assignment</a>
+    <a href="Week-03-CLI_Source_Control_and_Arrays_and_Functions\index.html">Week 03 Assignment</a><br>
+    <a href="Week-04-ECMAScript_6_and_Intermediate_JavaScript\LMS\Assignment\Submission\week04Assignment.html">Week 04 Assignment</a>
 </body>
 </html>
