--- a/Week-04-ECMAScript_6_and_Intermediate_JavaScript/LMS/Assignment/Submission/week04Assignment.html
+++ b/Week-04-ECMAScript_6_and_Intermediate_JavaScript/LMS/Assignment/Submission/week04Assignment.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><!-- Google Tag Manager -->
+<head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4CS4SPLHST"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4CS4SPLHST');
+</script><!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -25,4 +33,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
     
 </body>
-</html>
+</html><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4CS4SPLHST"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4CS4SPLHST');
+</script>
