--- a/Week-04-ECMAScript_6_and_Intermediate_JavaScript/LMS/Assignment/Submission/week04Assignment.html
+++ b/Week-04-ECMAScript_6_and_Intermediate_JavaScript/LMS/Assignment/Submission/week04Assignment.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4CS4SPLHST"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4CS4SPLHST');
-</script><!-- Google Tag Manager -->
-<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KHC6SJC');</script> -->
-<!-- End Google Tag Manager -->
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 04 Assignment</title>
 </head>
-<body><!-- Google Tag Manager (noscript) -->
-<!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHC6SJC"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
-<!-- End Google Tag Manager (noscript) -->
+<body>
     <h1>Jose G Espino Espino</h1>
     <h2>Promineo 2023-03-30-fe-pacific</h2>
     <h3>Week 04 Assignment video:</h3>
@@ -33,12 +16,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
     
 </body>
-</html><!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4CS4SPLHST"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4CS4SPLHST');
-</script>
+</html>
