added files from labs. Finished up to week 3

--- a/Week-03-CLI_Source_Control_and_Arrays_and_Functions/labsWeek (3)/week3whiteboard.html
+++ b/Week-03-CLI_Source_Control_and_Arrays_and_Functions/labsWeek (3)/week3whiteboard.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Week3 Lab</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript Week3 Lab</h1>  
-    
-    <!-- script for week03Lab file -->
-    <script src="week03Lab.js"></script>
+    <script src="week3whiteboard.js"></script>
 </body>
 </html>
