--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <h2>Promineo 2023-03-30-fe-pacific</h2>
     <a href="Week-03-CLI_Source_Control_and_Arrays_and_Functions\index.html">Week 03 Assignment</a><br>
     <a href="Week-04-ECMAScript_6_and_Intermediate_JavaScript\LMS\Assignment\Submission\week04Assignment.html">Week 04 Assignment</a>
+    <a href=".">Index</a>
 </body>
 </html>
