added all the files for my week 7 assignment

--- a/Week-07-HTML/LMS/Assignment/Submission/index.html
+++ b/Week-07-HTML/LMS/Assignment/Submission/index.html
@@ -24,7 +24,7 @@
         </li>
     </ol>
     <h3>Week 07 Assignment Video</h3>
-    <video src="Week07AssSubb" controls width="500"></video>
+    <video src="Week07AssSubb.mp4" controls width="500"></video>
 
   </body>
 </html>
