--- a/Week-07-HTML/LMS/Assignment/Submission/index.html
+++ b/Week-07-HTML/LMS/Assignment/Submission/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Assignment Video</title>
   </head>
   <body>
-    <h1>Assignment Week 07</h1>
-    <h2>Home</h2>
-    <ol>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="circle.html">Circle</a>
-        </li>
-        <li>
-          <a href="square.html">Square</a>
-        </li>
-        <li>
-          <a href="triangle.html">Triangle</a>
-        </li>
-    </ol>
+    <h1>Week 07</h1>
+    <h2>Assignment Video</h2>
+    <div>
+      <ol>
+          <li>
+            <a href="index.html">Assignment Video</a>
+          </li>
+          <li>
+            <a href="home.html">Home</a>
+          </li>
+          <li>
+            <a href="lms.html">LMS</a>
+          </li>
+          <li>
+            <a href="research.html">Research</a>
+          </li>
+      </ol>
+    </div>
     <h3>Week 07 Assignment Video</h3>
     <video src="Week07AssSubb.mp4" controls width="500"></video>
-
   </body>
 </html>
