--- a/Week-07-HTML/LMS/Assignment/Submission/research.html
+++ b/Week-07-HTML/LMS/Assignment/Submission/research.html
@@ -37,23 +37,12 @@
       <a href="lms.html">URL: Week 07 LMS</a>
       <p>
       <br>
-      I have chosen my own website as part of the prompt answer. Five elements I can identify are as follows: 
-      a heading element, an ordered list element, link elements, table element, and an image element.
-      The heading element has the name of "Week 07". It is the first element on the page. The ordered list element, has an ordered list by number. The
-      ordered list consist of links to the web pages for the coding assignment. Link are the next element, which link all the html documents. The next element identified is the Table element, which creates a table that has data about tags used in HTML. The headers of the table are Tag, Description, and Syntax.
-      Finally the last element identified is an image element. This image is of the document itself, opened in an text editor program. The image is of a div
-      which contains an ordered list of links as list items.
+      I have chosen my own website as part of the prompt answer. Five elements I can identify are as follows: a heading element, an ordered list element, link elements, table element, and an image element. The heading element has the name of "Week 07". It is the first element on the page. The ordered list element has an ordered list by number. The ordered list consists of links to the web pages for the coding assignment. Links are the next element, which links all the html documents. The next element identified is the Table element, which creates a table that has data about tags used in HTML. The headers of the table are Tag, Description, and Syntax. Finally, the last element identified is an image element. This image is of the document itself, opened in a text editor program. The image is of a div which contains an ordered list of links as list items.
     </p>
     <img src="images/url.png" alt="html document opened with a text editor program" style="border: 1px solid black;">
     <h4>3. What is a highlight of what you have learned this week? </h4>
-    <p>A highlight of what I learned this week has been that HTML is HyperText Markup Language. To me that means that HTML is just text with keywords added to
-      it. These keywords allow web browsers to display the webpage based on the keywords used on specific text. It is like telling the web browser, this text
-      will be a heading, then the web browser makes that text inside the tag a heading. Also, what I have also learned, is that elements have properties.
-      Some of these properties include, weather an element is inline or block. A block element, means that, the element will not have any other elements beside
-      it when it is displayed on the web browser. An example of this is a div element. The div element is the only element in that space with nothing beside it.
-      On the other had, inline means you can have elements beside you. An example of this is the span element. You can have multiple span elements next
-      to each other in the same line, because they are INLINE elements. These are only a few things as a highlight of what I have learned this week.
-
+    <p>
+      A highlight of what I learned this week has been that HTML is Hyper Text Markup Language. To me that means that HTML is just text with keywords added to it. These keywords allow web browsers to display the webpage based on the keywords used on specific text. It is like telling the web browser, this text will be a heading, then the web browser makes that text inside the tag a heading. Also, what I have also learned is that elements have properties. Some of these properties include whether an element is inline or block. A block element means that the element will not have any other elements beside it when it is displayed on the web browser. An example of this is a div element. The div element is the only element in that space with nothing beside it. On the other hand, inline means you can have elements beside you. An example of this is the span element. You can have multiple span elements next to each other in the same line because they are INLINE elements. These are only a few things as a highlight of what I have learned this week.
     </p>
 
     </div>
