--- a/Week-07-HTML/LMS/Assignment/Submission/lms.html
+++ b/Week-07-HTML/LMS/Assignment/Submission/lms.html
@@ -30,10 +30,10 @@
 <table>
   <tr><th colspan="3">HTML Tags</th></tr>
   <tr><th>Tag</th><th>Description</th><th>Syntax</th></tr>
-  <tr><th>Heading</th><th>Marks text as heading text.</th><th>&lt;h1&gt;Title&lt;/h1&gt;</th></tr>
-  <tr><th>Div</th><th>Creates a container that contains elements inside on it.</th><th>&lt;div&gt;elements&lt;/div&gt;</th></tr>
-  <tr><th>Ordered list</th><th>Creates an ordered list. Has to have list items inside to create ordered list.</th><th>&lt;ol&gt;&lt;li&gt;Item1&lt;/li&gt;&lt;/ol&gt;</th></tr>
-  <tr><th>List item</th><th>Creates a list item part of an ordered or unordered list.</th><th>&lt;ol&gt;&lt;li&gt;Item1&lt;/li&gt;&lt;/ol&gt;</th></tr>
+  <tr><td>Heading</td><td>Marks text as heading text.</td><td>&lt;h1&gt;Title&lt;/h1&gt;</td></tr>
+  <tr><td>Div</td><td>Creates a container that contains elements inside on it.</td><td>&lt;div&gt;elements&lt;/div&gt;</td></tr>
+  <tr><td>Ordered list</td><td>Creates an ordered list. Has to have list items inside to create ordered list.</td><td>&lt;ol&gt;&lt;li&gt;Item1&lt;/li&gt;&lt;/ol&gt;</td></tr>
+  <tr><td>List item</td><td>Creates a list item part of an ordered or unordered list.</td><td>&lt;ol&gt;&lt;li&gt;Item1&lt;/li&gt;&lt;/ol&gt;</td></tr>
 </table>
 <img src="images/tags.png" alt="html code screenshot">
 </div>
