--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <title>Jose G Espino Espino</title>
 </head>
 <body>
+  <div>
+
     <h1>Jose G Espino Espino</h1>
     <h2>Promineo 2023-03-30-fe-pacific</h2>
-    <a href="Week-03-CLI_Source_Control_and_Arrays_and_Functions\index.html">Week 03 Assignment</a><br>
-    <a href="Week-04-ECMAScript_6_and_Intermediate_JavaScript\LMS\Assignment\Submission\week04Assignment.html">Week 04 Assignment</a>
-    <br>
-    <a href="Week-06-DevTools_Debugging_and_Unit_Tests\LMS\Assignment\Submission\W06AssSub.html">Week 06 Assignment</a>
-    <br>
-    <a href=".">Index</a>
-    <br>
-    <a href="Week-07-HTML/LMS/Assignment/Submission/index.html">Week 07</a>
+  </div>
+  <div>
+
+    <h3>Links to navigate this repository:</h3>
+    <ol id="htmlLinks"></ol>
+  </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
