--- a/Week-09-Bootstrap/LMS/Assignment/Submission/index.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/index.html
@@ -1,55 +1,116 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
-    <title>Assignment Video</title>
+    <title>Hello, world!</title>
   </head>
   <body>
+    <div class="container-fluid bg-info shadow-sm">
       <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-info">
-            <a class="navbar-brand" href="#">espinojosege</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Assignment video <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="week09.html">Week 09</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="notes.html">Notes</a>
-                    </li>
-                </ul>
-            </div>
+        <nav class="navbar navbar-expand-md navbar-light bg-info">
+          <a class="navbar-brand" href="#">espinojosege</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html"
+                  >Assignment Video<span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="week09.html">Week 09</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="notes.html">Notes</a>
+              </li>
+            </ul>
+          </div>
         </nav>
+      </div>
     </div>
-    <div class="container">
+    <div class="container-fluid bg-light shadow-sm">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-6 text-center" >
-                <video src="Week09AssSub.mp4" controls class="w-100 border"></video>
-                <!-- <img src="media/images/code.png" class="img-fluid img-thumbnail" alt="html code on a text file editor program"> -->
+          <div class="col">
+            <div class="embed-responsive embed-responsive-16by9">
+              <video class="embed-responsive-item" src="..." controls></video>
             </div>
-            <div class="col-lg-6">
-                <h1>Week 09 Assignment</h1>
-                <p>Week 09 Bootstrap assignment was about installing Bootstrap to our project. Bootstrap is a framework of CSS. It is very powerful in that it can change the way items are displayed dynamically. This means that no matter your viewport, the website will display properly and without any problems. I really enjoyed this project, it is creative watching things change depending on where you are looking at it. I am currently running live server on my iphone and it works pretty well.</p>
-            </div>
+          </div>
         </div>
+        <div class="row align-items-top">
+          <div class="col-sm-8">
+            <p class="m-0 text-justify">
+              Week 09 Bootstrap assignment was about installing Bootstrap to our
+              project. Bootstrap is a framework of CSS. It is very powerful in
+              that it can change the way items are displayed dynamically. This
+              means that no matter your viewport, the website will display
+              properly and without any problems. I really enjoyed this project,
+              it is creative watching things change depending on where you are
+              looking at it. I am currently running live server on my iphone and
+              it works pretty well.
+            </p>
+          </div>
+          <div class="col-sm-4">
+              <img
+                src="media/images/Screenshot 2023-06-01 134717.png"
+                class="img-fluid rounded"
+                alt="..."
+              />
+          </div>
+        </div>
+      </div>
     </div>
-        <script src="script.js"></script>
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
+
+<!--Week 09 Bootstrap assignment was about installing Bootstrap to our
+    project. Bootstrap is a framework of CSS. It is very powerful in
+    that it can change the way items are displayed dynamically. This
+    means that no matter your viewport, the website will display
+    properly and without any problems. I really enjoyed this project, it
+    is creative watching things change depending on where you are
+    looking at it. I am currently running live server on my iphone and
+    it works pretty well.-->
