--- a/Week-09-Bootstrap/LMS/Assignment/Submission/week09.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/week09.html
@@ -1,157 +1,218 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
     <title>Week 09</title>
   </head>
   <body>
+    <div class="container-fluid bg-info shadow-sm">
       <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-success">
-            <a class="navbar-brand" href="#">espinojosege</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Assignment video</a>
-                      </li>
-                      <li class="nav-item active">
-                        <a class="nav-link" href="week09.html">Week 09
-                          <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="notes.html">Notes</a>
-                    </li>
-                </ul>
-            </div>
+        <nav class="navbar navbar-expand-md navbar-light bg-info">
+          <a class="navbar-brand" href="#">espinojosege</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Assignment Video</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="week09.html"
+                  >Week 09<span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="notes.html">Notes</a>
+              </li>
+            </ul>
+          </div>
         </nav>
+      </div>
+    </div>
+<!--    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-5 text-center">-->
+          <!--<img src="media/images/code.png" class="img-fluid" alt="html code on a text file editor program" height="auto">-->
+<!--        </div>
+        <div class="col-lg-7">
+          <h1 class="display-4">Week 09</h1>
+          <p class="text-justify">
+            Week 09 is about bootstrap. Bootstrap is a CSS library that is used
+            to accomplish a layout that will be responsive accross multiple
+            screensizes. It is very simple to implement, the only hurdle to get
+            over is learning all the syntax that is required to accomplish a
+            responsive layout. Everything has a class that has to be added to
+            the element tag you are working on. If you use the correct syntax
+            and add the correct classes in order. You will be awarded amazing
+            results. In this example of my Week 09 coding assignment. My task is
+            to create a mmulti-page website, that accomplishes that. I have to
+            use the bootstrap CSS library and use all the classes together to
+            create a responsive website. One that will work on large screens,
+            phone screens, and everything in between screens. This is a very fun
+            challenge. I have completed most of the requirements. The menu on
+            the top middle area, called the NavBar, is completely responsive
+            across diferent screen sizes. I have chosen to use the -lg class,
+            because to me it made the website look nicer. As I have tried to
+            have the video look better across different screen sizes. I will
+            share a few screenshots below this that will illustrate this.
+          </p>
+        </div>
+      </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-xl-4 text-center" >
-                <img src="media/images/code.png" class="img-fluid img-thumbnail" alt="html code on a text file editor program">
-            </div>
-            <div class="col-xl-8">
-                <h1 class="display-3">Week 09</h1>
-                <p class="text-justify">
-                    Week 09 is about bootstrap. Bootstrap is a CSS library that is used to accomplish a layout that will be responsive accross multiple screensizes.
-                    It is very simple to implement, the only hurdle to get over is learning all the syntax that is required to accomplish a responsive layout.
-                    Everything has a class that has to be added to the element tag you are working on. If you use the correct syntax and add the correct classes
-                    in order. You will be awarded amazing results. In this example of my Week 09 coding assignment. My task is to create a mmulti-page website,
-                    that accomplishes that. I have to use the bootstrap CSS library and use all the classes together to create a responsive website. One that
-                    will work on large screens, phone screens, and everything in between screens. This is a very fun challenge. I have completed most of the requirements.
-                    The menu on the top middle area, called the NavBar, is completely responsive across diferent screen sizes. I have chosen to use the -lg class, because
-                    to me it made the website look nicer. As I have tried to have the video look better across different screen sizes. I will share a few screenshots below this
-                    that will illustrate this.
-                </p>
-            </div>
+      <div class="row">
+        <div class="col-lg">
+          <table
+            class="table table-striped table-bordered table-hover table-sm table-responsive-sm"
+          >
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Boostrap container breakpoints</th>
+                <th scope="col">
+                  Extra small<br /><small class="text-muted"><576px</small>
+                </th>
+                <th scope="col">
+                  Small<br /><small class="text-muted">≥576px</small>
+                </th>
+                <th scope="col">
+                  Medium<br /><small class="text-muted">≥768px</small>
+                </th>
+                <th scope="col">
+                  Large<br /><small class="text-muted">≥992px</small>
+                </th>
+                <th scope="col">
+                  Extra large<br /><small class="text-muted">≥1200px</small>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">.contianer</th>
+                <td>100%</td>
+                <td>540px</td>
+                <td>720px</td>
+                <td>960px</td>
+                <td>1140px</td>
+              </tr>
+              <tr>
+                <th scope="row">.contianer-sm</th>
+                <td>100%</td>
+                <td>540px</td>
+                <td>720px</td>
+                <td>960px</td>
+                <td>1140px</td>
+              </tr>
+              <tr>
+                <th scope="row">.contianer-md</th>
+                <td>100%</td>
+                <td>100%</td>
+                <td>720px</td>
+                <td>960px</td>
+                <td>1140px</td>
+              </tr>
+              <tr>
+                <th scope="row">.contianer-lg</th>
+                <td>100%</td>
+                <td>100%</td>
+                <td>100%</td>
+                <td>960px</td>
+                <td>1140px</td>
+              </tr>
+              <tr>
+                <th scope="row">.contianer-xl</th>
+                <td>100%</td>
+                <td>100%</td>
+                <td>100%</td>
+                <td>100%</td>
+                <td>1140px</td>
+              </tr>
+              <tr>
+                <th scope="row">.container-fluid</th>
+                <td>100%</td>
+                <td>100%</td>
+                <td>100%</td>
+                <td>100%</td>
+                <td>100%</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12" >
-                <table class="table table-striped table-bordered table-hover table-sm table-responsive-sm">
-                    <thead class="thead-light">
-                        <tr>
-                            <th scope="col">Boostrap container breakpoints</th>
-                            <th scope="col">Extra small<br><small class="text-muted"><576px</small></th>
-                            <th scope="col">Small<br><small class="text-muted">≥576px</small></th>
-                            <th scope="col">Medium<br><small class="text-muted">≥768px</small></th>
-                            <th scope="col">Large<br><small class="text-muted">≥992px</small></th>
-                            <th scope="col">Extra large<br><small class="text-muted">≥1200px</small></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">.contianer</th>
-                            <td>100%</td>
-                            <td>540px</td>
-                            <td>720px</td>
-                            <td>960px</td>
-                            <td>1140px</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">.contianer-sm</th>
-                            <td>100%</td>
-                            <td>540px</td>
-                            <td>720px</td>
-                            <td>960px</td>
-                            <td>1140px</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">.contianer-md</th>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>720px</td>
-                            <td>960px</td>
-                            <td>1140px</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">.contianer-lg</th>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>960px</td>
-                            <td>1140px</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">.contianer-xl</th>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>1140px</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">.container-fluid</th>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>100%</td>
-                            <td>100%</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <h2 class="display-5">Container width breakpoints</h2>
+          <p class="text-justify">
+            Container width breakpoints means that the HTML element with the
+            class container will have responsive width across all screen sizes.
+            Based on the table above, this means that, class container will have
+            a responsive width across all screen sizes. The
+            conatiner-{breakpoint} class will have a responsive width across
+            screen sizes provided by the parameter breakpoint. Class
+            container-fluid will have 100% screen width across all screen sizes.
+            In the next paragraph I will explain more.
+          </p>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="display-4">Container width breakpoints</h2>
-                <p class="text-justify">
-
-                </p>
-            </div>
-            <div class="col-sm-12">
-                <h2 class="display-4">Breakpoints explained</h2>
-                <p class="text-justify">
-
-                </p>
-            </div>
-            
+        <div class="col-lg-6">
+          <h2 class="display-5">Breakpoints explained</h2>
+          <p class="text-justify">
+            For the class container-{breakpoint} means that the width of the
+            container will be responsive until the breakpoint. For example, if
+            you have class container-xl, the width of the container will be 100%
+            beginning at screen sizes greater than 768px but less than 992px
+            width. This means that if the screen size is less than 992px, the
+            container will begin to have 100% width. That means if the container
+            was next to another container, the container-xl element will begin
+            to stack, and not change widths, because it will be 100% width. The
+            responsive width will stop at that specific breakpoint and it will
+            start to behave as a block element instead.
+          </p>
         </div>
-    </div>
-
-
-
-
-
-
+      </div>
+    </div>-->
 
     <script src="script.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
