--- a/Week-09-Bootstrap/LMS/Notes/index.html
+++ b/Week-09-Bootstrap/LMS/Notes/index.html
@@ -12,7 +12,7 @@
     <style>
     </style>
   </head>
-  <body class="container">
+  <body>
 <!-- <div class="alert alert-primary">alert alert-primary</div>
 <div class="alert alert-secondary">alert alert-primary</div>
 <div class="alert alert-success">alert alert-primary</div>
