completed week 09 Assignment

--- a/Week-09-Bootstrap/LMS/Assignment/Submission/index.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/index.html
@@ -16,12 +16,12 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Week09 Video</title>
   </head>
   <body>
     <div class="container-fluid bg-info shadow-sm">
       <div class="container">
-        <nav class="navbar navbar-expand-md navbar-light bg-info">
+        <nav class="navbar navbar-expand-md navbar-dark bg-info">
           <a class="navbar-brand" href="#">espinojosege</a>
           <button
             class="navbar-toggler"
@@ -55,15 +55,15 @@
     </div>
     <div class="container-fluid bg-light shadow-sm">
       <div class="container">
-        <div class="row">
+        <div class="row p-1">
           <div class="col">
-            <div class="embed-responsive embed-responsive-16by9">
-              <video class="embed-responsive-item" src="..." controls></video>
+            <div class="text-center">
+              <video src="..." controls width="100%"></video>
             </div>
           </div>
         </div>
-        <div class="row align-items-top">
-          <div class="col-sm-8">
+        <div class="row align-items-center p-1">
+          <div class="col-lg-8">
             <p class="m-0 text-justify">
               Week 09 Bootstrap assignment was about installing Bootstrap to our
               project. Bootstrap is a framework of CSS. It is very powerful in
@@ -75,12 +75,12 @@
               it works pretty well.
             </p>
           </div>
-          <div class="col-sm-4">
-              <img
-                src="media/images/Screenshot 2023-06-01 134717.png"
-                class="img-fluid rounded"
-                alt="..."
-              />
+          <div class="col-lg-4">
+            <img
+              src="media/images/Screenshot 2023-06-01 134717.png"
+              class="img-fluid img-thumbnail rounded"
+              alt="..."
+            />
           </div>
         </div>
       </div>
