--- a/Week-09-Bootstrap/LMS/Assignment/Submission/week09.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/week09.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container-fluid bg-info shadow-sm">
       <div class="container">
-        <nav class="navbar navbar-expand-md navbar-light bg-info">
+        <nav class="navbar navbar-expand-md navbar-dark bg-info">
           <a class="navbar-brand" href="#">espinojosege</a>
           <button
             class="navbar-toggler"
@@ -53,148 +53,152 @@
         </nav>
       </div>
     </div>
-<!--    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-5 text-center">-->
-          <!--<img src="media/images/code.png" class="img-fluid" alt="html code on a text file editor program" height="auto">-->
-<!--        </div>
-        <div class="col-lg-7">
-          <h1 class="display-4">Week 09</h1>
-          <p class="text-justify">
-            Week 09 is about bootstrap. Bootstrap is a CSS library that is used
-            to accomplish a layout that will be responsive accross multiple
-            screensizes. It is very simple to implement, the only hurdle to get
-            over is learning all the syntax that is required to accomplish a
-            responsive layout. Everything has a class that has to be added to
-            the element tag you are working on. If you use the correct syntax
-            and add the correct classes in order. You will be awarded amazing
-            results. In this example of my Week 09 coding assignment. My task is
-            to create a mmulti-page website, that accomplishes that. I have to
-            use the bootstrap CSS library and use all the classes together to
-            create a responsive website. One that will work on large screens,
-            phone screens, and everything in between screens. This is a very fun
-            challenge. I have completed most of the requirements. The menu on
-            the top middle area, called the NavBar, is completely responsive
-            across diferent screen sizes. I have chosen to use the -lg class,
-            because to me it made the website look nicer. As I have tried to
-            have the video look better across different screen sizes. I will
-            share a few screenshots below this that will illustrate this.
-          </p>
+    <div class="container-fluid bg-secondary text-white shadow-sm">
+      <div class="container">
+        <div class="row align-items-center p-1">
+          <div class="col-lg-4">
+            <div class="text-center">
+              <img
+                src="media/images/code.png"
+                class="img-fluid img-thumbnail rounded"
+                alt="..."
+              />
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <p class="m-0 text-justify">
+              Week 09 is about bootstrap. Bootstrap is a CSS library that is
+              used to accomplish a layout that will be responsive accross
+              multiple screensizes. It is very simple to implement, the only
+              hurdle to get over is learning all the syntax that is required to
+              accomplish a responsive layout. Everything has a class that has to
+              be added to the element tag you are working on. If you use the
+              correct syntax and add the correct classes in order. You will be
+              awarded amazing results. In this example of my Week 09 coding
+              assignment. My task is to create a mmulti-page website, that
+              accomplishes that. I have to use the bootstrap CSS library and use
+              all the classes together to create a responsive website. One that
+              will work on large screens, phone screens, and everything in
+              between screens. This is a very fun challenge. I have completed
+              most of the requirements. The menu on the top middle area, called
+              the NavBar, is completely responsive across diferent screen sizes.
+              I have chosen to use the -lg class, because to me it made the
+              website look nicer. As I have tried to have the video look better
+              across different screen sizes. I will share a few screenshots
+              below this that will illustrate this.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg">
-          <table
-            class="table table-striped table-bordered table-hover table-sm table-responsive-sm"
-          >
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Boostrap container breakpoints</th>
-                <th scope="col">
-                  Extra small<br /><small class="text-muted"><576px</small>
-                </th>
-                <th scope="col">
-                  Small<br /><small class="text-muted">≥576px</small>
-                </th>
-                <th scope="col">
-                  Medium<br /><small class="text-muted">≥768px</small>
-                </th>
-                <th scope="col">
-                  Large<br /><small class="text-muted">≥992px</small>
-                </th>
-                <th scope="col">
-                  Extra large<br /><small class="text-muted">≥1200px</small>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">.contianer</th>
-                <td>100%</td>
-                <td>540px</td>
-                <td>720px</td>
-                <td>960px</td>
-                <td>1140px</td>
-              </tr>
-              <tr>
-                <th scope="row">.contianer-sm</th>
-                <td>100%</td>
-                <td>540px</td>
-                <td>720px</td>
-                <td>960px</td>
-                <td>1140px</td>
-              </tr>
-              <tr>
-                <th scope="row">.contianer-md</th>
-                <td>100%</td>
-                <td>100%</td>
-                <td>720px</td>
-                <td>960px</td>
-                <td>1140px</td>
-              </tr>
-              <tr>
-                <th scope="row">.contianer-lg</th>
-                <td>100%</td>
-                <td>100%</td>
-                <td>100%</td>
-                <td>960px</td>
-                <td>1140px</td>
-              </tr>
-              <tr>
-                <th scope="row">.contianer-xl</th>
-                <td>100%</td>
-                <td>100%</td>
-                <td>100%</td>
-                <td>100%</td>
-                <td>1140px</td>
-              </tr>
-              <tr>
-                <th scope="row">.container-fluid</th>
-                <td>100%</td>
-                <td>100%</td>
-                <td>100%</td>
-                <td>100%</td>
-                <td>100%</td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="container-fluid bg-warning shadow-sm">
+      <div class="container">
+        <div class="row align-items-center p-1 justify-content-center">
+          <div class="col-lg-8">
+            <table
+              class="table table-dark table-bordered table-hover table-sm table-responsive-sm"
+            >
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">
+                    Boostrap container breakpoints<br />
+                    <small class="text-muted">breakpoint classes</small>
+                  </th>
+                  <th scope="col">
+                    Extra small<br /><small class="text-muted"><576px</small>
+                  </th>
+                  <th scope="col">
+                    Small<br /><small class="text-muted">≥576px</small>
+                  </th>
+                  <th scope="col">
+                    Medium<br /><small class="text-muted">≥768px</small>
+                  </th>
+                  <th scope="col">
+                    Large<br /><small class="text-muted">≥992px</small>
+                  </th>
+                  <th scope="col">
+                    Extra large<br /><small class="text-muted">≥1200px</small>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">.contianer</th>
+                  <td>100%</td>
+                  <td>540px</td>
+                  <td>720px</td>
+                  <td>960px</td>
+                  <td>1140px</td>
+                </tr>
+                <tr>
+                  <th scope="row">.contianer-sm</th>
+                  <td>100%</td>
+                  <td>540px</td>
+                  <td>720px</td>
+                  <td>960px</td>
+                  <td>1140px</td>
+                </tr>
+                <tr>
+                  <th scope="row">.contianer-md</th>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>720px</td>
+                  <td>960px</td>
+                  <td>1140px</td>
+                </tr>
+                <tr>
+                  <th scope="row">.contianer-lg</th>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>960px</td>
+                  <td>1140px</td>
+                </tr>
+                <tr>
+                  <th scope="row">.contianer-xl</th>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>1140px</td>
+                </tr>
+                <tr>
+                  <th scope="row">.container-fluid</th>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>100%</td>
+                  <td>100%</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-lg-4 d-flex justify-content-center">
+            <div class="text-center">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="media/images/Screenshot 2023-06-03 235112.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Breakpoints Explained</h5>
+                  <p class="card-text">
+                    Here are the definitions and examples that define the
+                    bootstrap grid system.
+                  </p>
+                  <a
+                    href="https://getbootstrap.com/docs/4.4/layout/grid/"
+                    class="btn btn-info"
+                    >Go somewhere</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h2 class="display-5">Container width breakpoints</h2>
-          <p class="text-justify">
-            Container width breakpoints means that the HTML element with the
-            class container will have responsive width across all screen sizes.
-            Based on the table above, this means that, class container will have
-            a responsive width across all screen sizes. The
-            conatiner-{breakpoint} class will have a responsive width across
-            screen sizes provided by the parameter breakpoint. Class
-            container-fluid will have 100% screen width across all screen sizes.
-            In the next paragraph I will explain more.
-          </p>
-        </div>
-        <div class="col-lg-6">
-          <h2 class="display-5">Breakpoints explained</h2>
-          <p class="text-justify">
-            For the class container-{breakpoint} means that the width of the
-            container will be responsive until the breakpoint. For example, if
-            you have class container-xl, the width of the container will be 100%
-            beginning at screen sizes greater than 768px but less than 992px
-            width. This means that if the screen size is less than 992px, the
-            container will begin to have 100% width. That means if the container
-            was next to another container, the container-xl element will begin
-            to stack, and not change widths, because it will be 100% width. The
-            responsive width will stop at that specific breakpoint and it will
-            start to behave as a block element instead.
-          </p>
-        </div>
-      </div>
-    </div>-->
 
     <script src="script.js"></script>
     <!-- Optional JavaScript -->
