--- a/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container-fluid bg-info shadow-sm">
       <div class="container">
-        <nav class="navbar navbar-expand-md navbar-light bg-info">
+        <nav class="navbar navbar-expand-md navbar-dark bg-info">
           <a class="navbar-brand" href="#">espinojosege</a>
           <button
             class="navbar-toggler"
@@ -53,6 +53,83 @@
         </nav>
       </div>
     </div>
+    <div class="container-fluid bg-success text-white shadow-sm">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-12">
+            <div class="jumbotron bg-dark m-0">
+              <h1 class="display-4">Thank you!</h1>
+              <p class="lead">
+                Thank you for viewing my Week 09 Coding Assignment... I
+                understand your time is valueable!
+              </p>
+              <hr class="my-4" />
+              <p>Click the button to view my Week 09 Assignment video.</p>
+              <a class="btn btn-info btn-lg" href="index.html" role="button"
+                >Assignment Video</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid bg-success text-white shadow-sm">
+      <div class="container">
+        <div class="row align-items-center p-1">
+          <div class="col-md-8 d-flex justify-content-center">
+            <div class="card border-warning bg-dark" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Take the time to rate my Assignment.</h5>
+                <p class="card-text">
+                  Please fill out the form with your rating. I appreciate your
+                  feedback!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <form>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="name@PromineoTech.com"
+                />
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect1">Rate from 1-5</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1"
+                  >Explain your rating, give feedback...</label
+                >
+                <textarea
+                  class="form-control"
+                  id="exampleFormControlTextarea1"
+                  rows="3"
+                  placeholder="I gave the rating of..."
+                ></textarea>
+              </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-dark border-warning">
+                  Submit
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
