completed Week 10 Assignment

--- a/Week-09-Bootstrap/LMS/Assignment/Submission/index.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/index.html
@@ -58,7 +58,11 @@
         <div class="row p-1">
           <div class="col">
             <div class="text-center">
-              <video src="AssignmentvideoWeek09.mp4" controls width="100%"></video>
+              <video
+                src="AssignmentvideoWeek09.mp4"
+                controls
+                width="100%"
+              ></video>
             </div>
           </div>
         </div>
