finished week 11 project

--- a/Week-10-JavaScript_and_DOM_Manipulation/LMS/Assignment/Submission/index.html
+++ b/Week-10-JavaScript_and_DOM_Manipulation/LMS/Assignment/Submission/index.html
@@ -43,7 +43,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="AssignmentVideo.html">Assignment Video</a>
+                <a class="nav-link" href="AssignmentVideo.html"
+                  >Assignment Video</a
+                >
               </li>
             </ul>
           </div>
