added links to week 11

--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4CS4SPLHST"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4CS4SPLHST"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-4CS4SPLHST');
-</script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      gtag("config", "G-4CS4SPLHST");
+    </script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jose G Espino Espino</title>
-</head>
-<body>
-  <div>
+  </head>
+  <body>
+    <div>
+      <h1>Jose G Espino Espino</h1>
+      <h2>Promineo 2023-03-30-fe-pacific</h2>
+    </div>
+    <div>
+      <h3>Links to navigate this repository:</h3>
+      <ol id="htmlLinks"></ol>
+    </div>
 
-    <h1>Jose G Espino Espino</h1>
-    <h2>Promineo 2023-03-30-fe-pacific</h2>
-  </div>
-  <div>
-
-    <h3>Links to navigate this repository:</h3>
-    <ol id="htmlLinks"></ol>
-  </div>
-
-  <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
