finished week 12 Project

--- a/Week-12-Project/LMS/Assignment/Submission/aVideo.html
+++ b/Week-12-Project/LMS/Assignment/Submission/aVideo.html
@@ -16,37 +16,20 @@
       crossorigin="anonymous"
     />
 
-    <title>Moth Hotel</title>
+    <title>Assignment Video</title>
   </head>
   <body>
-    <div class="jumbotron mb-1">
-      <h1 class="display-4">Welcome!</h1>
-      <p class="lead">Please create a room.</p>
-      <hr class="my-4" />
-      <div class="form-group">
-        <label for="name">Room name:</label>
-        <input
-          type="text"
-          class="form-control"
-          id="name"
-          aria-describedby="nameHelp"
-        />
-        <small id="nameHelp" class="form-text text-muted"
-          >This will create a new form for your own moth hotel room.</small
-        >
+    <div class="container bg-warning">
+      <h1>Assignment Video Week 12</h1><a href="aVideo.html" class="btn bg-info m-2">Assignment Video</a><a href="index.html" class="btn bg-info m2">Project Week 12</a>
+      <div class="row">
+        <div class="col">
+            <video src="video1808792960.mp4" width="100%" controls></video>
+        </div>
       </div>
-      <button type="button" class="btn btn-secondary" id="createRunePage">
-        Create
-      </button>
-
-      <div id="totals"></div><br>
-        <a href="aVideo.html" class="btn bg-info m-2">Assignment Video</a><a href="index.html" class="btn bg-info m2">Project Week 12</a>
-    </div>
-    <div class="container">
-      <div class="row" id="rooms"></div>
     </div>
 
     <!-- Optional JavaScript -->
+    <script src="index.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -63,6 +46,5 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
   </body>
 </html>
