finished index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2>Promineo 2023-03-30-fe-pacific</h2>
     </div>
     <div>
-      <h3>Links to navigate this repository:</h3>
+      <h3>links to navigate this repository:</h3>
       <ol id="htmlLinks"></ol>
     </div>
 
