--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <h3>links to navigate this repository:</h3>
       <ol id="htmlLinks"></ol>
     </div>
+    <a href="Week-12-Project/LMS/Assignment/Submission/index.html"
+      >Week 12 Final Project.</a
+    >
 
     <script src="index.js"></script>
   </body>
